# MapReduce

./: .gitignore  CMakeLists.txt  README
include/: logRAII.h
src/: master.cpp  worker.cpp
src/utility/: logRAII.cpp  map_reduceFun.cpp
test/test_MR/: mr-0-0  mr-1-0  mr-1-1  mr-1-2  mr-1-3  pg-being_ernest.txt  pg-being_ernest2.txt
test/test_log4cpp/: log.conf  testLog  testLog.cpp
